# Retrieval_Augmented_Generation_RAG

./: .gitignore  README.md  agentic_rag.ipynb  main.py  pyproject.toml  requirements.txt
Agentic_Rag/: agentic_rag.ipynb
Data_Ingestion/: 01_data_ingestion_textfiles.ipynb  02_pdf_files.ipynb  03_word_documents.ipynb  04_csv_excel.ipynb  05_json_data.ipynb  06_sql_data.ipynb
Data_Ingestion/data/structured_files/: inventory.xlsx
Embedding/: embedding_technique.ipynb
VectorStore_VectorDB/: vectorstore.ipynb
VectorStore_VectorDB/chroma_db/: chroma.sqlite3
